fixed the damn cards in the about page being misaligned

--- a/css/style.css
+++ b/css/style.css
@@ -1624,6 +1624,11 @@ footer a:hover {
 03.ABOUT US
 
 -------------------------------- */
+
+#service-cards {
+    transform: skewY(1deg);
+}
+
 .km-space {
     height: 60px;
 }
